# AgentOS

./: .env.example  .gitignore  Claude.md  Makefile  README.md  docker-compose.yml
.claude/: settings.json
.claude/commands/: add-endpoint.md  plan-feature.md  review.md
.github/workflows/: ci.yml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 2e74c9417fe0_add_idempotency_keys.py  75a4f46f4297_add_conversations_and_messages.py  a7a4b067c4ee_add_users_table.py
backend/app/: config.py  main.py
backend/app/api/v1/: README.md  auth.py  chat.py  conversations.py  deps.py  messages.py  models.py
backend/app/core/: errors.py  ids.py
backend/app/core/auth/: README.md  backend.py  manager.py  users.py
backend/app/core/llm/: README.md  adapter.py  anthropic_adapter.py  catalog.py  catalog.yaml  groq_adapter.py  openai_adapter.py  pricing.py  registry.py  registry.yaml  together_adapter.py  types.py
backend/app/core/telemetry/: logging.py  middleware.py
backend/app/db/: base.py  session.py
backend/app/models/: README.md  conversation.py  idempotency_key.py  message.py  user.py
backend/app/schemas/: README.md  chat.py  content_block.py  conversation.py  message.py  model.py  pagination.py  user.py
backend/app/services/: README.md  chat.py  conversations.py  idempotency.py  messages.py  models.py  users.py
backend/tests/: conftest.py  test_anthropic_adapter.py  test_auth.py  test_chat.py  test_chat_stream.py  test_conversations.py  test_groq_adapter.py  test_health.py  test_health_ready.py  test_ids.py  test_messages.py  test_models.py  test_openai_adapter.py  test_pricing.py  test_registry.py  test_together_adapter.py
docs/: API_CONTRACT.md  ARCHITECTURE.md  BUILD_LOG.md  ROADMAP.md  docs_policy.md
docs/DECISIONS/: 0002 Provider Abstraction.md  0003 Auth Layering.md
frontend/streamlit_app/: api_client.py  app.py
scripts/: check_layering.sh
