[project]
name = "agentos-backend"
version = "0.1.0"
description = "AgentOS chat backend"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic-settings>=2.6",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "alembic>=1.14",
    "structlog>=24.4",
    "uuid6>=2024.7.10",
    # WHY httpx as a prod dep, not a provider SDK: ADR-0002 decision 1 — one
    # HTTP client shared by every core/llm/ adapter (timeouts, retries) is
    # simpler to reason about than five SDKs with different conventions.
    "httpx>=0.27",
    # WHY pyyaml explicit, not left implicit: it was already resolved
    # transitively (uvicorn[standard] pulls it in), but core/llm/registry.py
    # imports it directly to parse registry.yaml (API_CONTRACT.md §4) — an
    # explicit dependency shouldn't rely on another package's extras still
    # including it.
    "pyyaml>=6.0",
    # WHY fastapi-users over hand-rolled pyjwt+argon2: register/login/JWT
    # issuance is well-trodden ground with real security footguns (timing
    # attacks on login, password policy, token replay) — chose a maintained
    # library over reinventing it. Pulls in pyjwt, argon2-cffi, and
    # email-validator transitively; see app/core/auth/README.md for how its
    # framework-coupled pieces are kept out of app/services/.
    "fastapi-users[sqlalchemy]>=15.0.5",
    # WHY explicit: fastapi-users' default login route parses
    # OAuth2PasswordRequestForm, which needs python-multipart to parse the
    # form body — not pulled in by plain `fastapi` (only `fastapi[standard]`
    # bundles it, which we don't use).
    "python-multipart>=0.0.32",
]

[dependency-groups]
dev = [
    "ruff>=0.8",
    "mypy>=1.13",
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "types-pyyaml>=6.0",
    "respx>=0.21",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "C4"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
# WHY explicit_package_bases: there are no __init__.py files (PEP 420
# namespace packages throughout), so mypy needs to be told "." is the root
# that "app" is relative to, or it double-registers app/config.py as both
# "config" and "app.config" when resolving imports.
explicit_package_bases = true
mypy_path = "."

[tool.pytest.ini_options]
asyncio_mode = "auto"
